--- a/test/integration/inspec.yml
+++ b/test/integration/inspec.yml
@@ -7,5 +7,5 @@ license: Apache-2.0
 summary: Integration test of the Bastillion Docker image
 version: 0.1.0
 supports:
-  - platform-name: ubuntu
+  - platform-name: debian
   - platform-name: alpine
