--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -10,6 +10,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: true
       matrix:
         platform: [linux/amd64, linux/arm64, linux/arm/v7]
         distribution: [debian, alpine]
