Added grace period for container to spin up

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -80,8 +80,8 @@ jobs:
           # Wait for container to spin up
           end=$(($(date +%s)+60))
           until $(docker logs bastillion | grep -q "Started ServerConnector"); do 
-            if [ $(date +%s) -ge $end ]; then
-              echo "Container did not spun up in 60 sec"
+            if [ $(date +%s) -lt $end ]; then
+              echo "Container did not spun up within 60 sec"
               docker logs bastillion
               exit -1
             fi
