--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -80,12 +80,14 @@ jobs:
           # Wait for container to spin up
           end=$(($(date +%s)+60))
           until $(docker logs bastillion | grep -q "Started ServerConnector"); do 
-            if [ $(date +%s) -lt $end ]; then
+            if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 60 sec"
               docker logs bastillion
               exit -1
+            else:
+              echo "waiting..."
+              sleep 1
             fi
-            sleep 1 
           done
           inspec exec ./test/integration -t docker://bastillion
       -
