Debugging grace period for container to spin up

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -79,7 +79,8 @@ jobs:
         run: |
           # Wait for container to spin up
           end=$(($(date +%s)+60))
-          until $(docker logs bastillion | grep -q "Started ServerConnector"); do 
+          echo $end
+          until $(docker logs bastillion 2>&1 | grep -q "Started ServerConnector"); do
             if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 60 sec"
               docker logs bastillion
