fixed grace period for container to spin up

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -84,7 +84,7 @@ jobs:
             if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 60 sec"
               docker logs bastillion
-              exit -1
+              break
             else:
               echo "waiting..."
               sleep 1
