--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -80,9 +80,8 @@ jobs:
         run: |
           # Wait for container to spin up
           end=$(($(date +%s)+120))
-          echo $end
           until $(docker logs bastillion 2>&1 | grep -q "Started ServerConnector"); do
-            echo "waiting..."
+            echo "waiting for conatiner to spin up..."
             sleep 1
             if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 120 sec"
