--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -68,7 +68,8 @@ jobs:
           docker run -d --platform ${DOCKER_PLATFORM} --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}-${BUILD_NR}"
           if [[ $DISTRIBUTION == "debian" ]]; then
             export DEBIAN_FRONTEND=noninteractive
-            docker exec -u 0 bastillion apt-get update && apt-get install net-tools procps -y
+            docker exec -u 0 bastillion apt-get update
+            docker exec -u 0 bastillion apt-get install net-tools procps -y
           fi
           if [[ $DISTRIBUTION == "alpine" ]]; then
             docker exec -u 0 bastillion apk --no-cache add net-tools procps
