Show elapsed time for container spin up

--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -80,9 +80,10 @@ jobs:
         name: InSpec Integration Test
         run: |
           # Wait for container to spin up
+          echo "waiting for conatiner to spin up..."
           end=$(($(date +%s)+120))
           until $(docker logs bastillion 2>&1 | grep -q "Started ServerConnector"); do
-            echo "waiting for conatiner to spin up..."
+            echo "Waiting since: $((120+$(date +%s)-$end)) sec"
             sleep 1
             if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 120 sec"
