--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -82,7 +82,7 @@ jobs:
           echo "Waiting for conatiner to spin up..."
           end=$(($(date +%s)+120))
           until $(docker logs bastillion 2>&1 | grep -q "Started ServerConnector"); do
-            echo -ne "Elapsed time:	$((120+$(date +%s)-$end))s"
+            echo "since:	$((120+$(date +%s)-$end))s"
             sleep 1
             if [ $(date +%s) -gt $end ]; then
               echo "Container did not spun up within 120 seconds"
