--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -6,14 +6,32 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  IMAGE_NAME: bastillion-dev
+  IMAGE_VER: latest
+
 jobs:
+  matrix:
+    runs-on: ubuntu-latest
+    outputs:
+      built_matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:  
+      - 
+        name: Checkout
+        uses: actions/checkout@v3
+      - 
+        name: Load matrix from JSON
+        id: set-matrix
+        run: |
+          output=$(echo $(cat .github/matrix-parameters.json) | sed 's/ //g' )
+          echo "::set-output name=matrix::$output"
   build-and-test:
     runs-on: ubuntu-latest
+    needs: matrix
     strategy:
       fail-fast: false
       matrix:
-        platform: [linux/amd64, linux/arm64, linux/arm/v7]
-        distribution: [debian, alpine]
+        ${{ insert }}: ${{ fromJson(needs.matrix.outputs.built_matrix) }}
         exclude:
           - distribution: alpine
             platform: linux/arm/v7
@@ -49,7 +67,7 @@ jobs:
           echo "::set-output name=arch::${ARCH}"
           # Fix for 3.14.0
           if [ "${#BASTILLION_FILENAME_VERSION}" -lt 7 ]; then BASTILLION_FILENAME_VERSION=$(echo "${BASTILLION_FILENAME_VERSION}0"); fi
-          docker buildx build -t "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}-${BUILD_NR}" \
+          docker buildx build -t "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}-${BUILD_NR}" \
             --platform ${DOCKER_PLATFORM} \
             --build-arg BASTILLION_VERSION=${BASTILLION_VERSION} \
             --build-arg BASTILLION_FILENAME_VERSION=${BASTILLION_FILENAME_VERSION} \
@@ -65,7 +83,7 @@ jobs:
         run: |
           mkdir $(pwd)/keydb
           chmod 777 $(pwd)/keydb
-          docker run -d --platform ${DOCKER_PLATFORM} --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}-${BUILD_NR}"
+          docker run -d --platform ${DOCKER_PLATFORM} --rm --name bastillion -v $(pwd)/keydb:/keydb "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}-${BUILD_NR}"
           if [[ $DISTRIBUTION == "debian" ]]; then
             export DEBIAN_FRONTEND=noninteractive
             docker exec -u 0 bastillion apt-get update
@@ -113,15 +131,18 @@ jobs:
           ARCH: ${{ steps.build.outputs.arch }}
           BUILD_NR: ${{ github.run_number }}
         run: |
-          docker tag "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}-${BUILD_NR}" "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}"
-          docker push "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}-${BUILD_NR}"
-          docker push "${DOCKER_USER}/bastillion-dev:latest-${DISTRIBUTION}-${ARCH}"
-
+          docker tag "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}-${BUILD_NR}" "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}"
+          docker push "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}-${BUILD_NR}"
+          docker push "${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${DISTRIBUTION}-${ARCH}"
 
   push-shared-tags:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: 
+      - build-and-test
     steps:
+      - 
+        name: Checkout
+        uses: actions/checkout@v3
       -
         name: Docker Login
         uses: docker/login-action@v2
@@ -134,9 +155,24 @@ jobs:
           DOCKER_USER: ${{ secrets.DOCKER_HUB_USERNAME }}
           BUILD_NR: ${{ github.run_number }}
         run: |
-          docker manifest create ${DOCKER_USER}/bastillion-dev:latest-alpine ${DOCKER_USER}/bastillion-dev:latest-alpine-arm64-${BUILD_NR} ${DOCKER_USER}/bastillion-dev:latest-alpine-amd64-${BUILD_NR}
-          docker manifest push ${DOCKER_USER}/bastillion-dev:latest-alpine 
-          docker manifest create ${DOCKER_USER}/bastillion-dev:latest-debian ${DOCKER_USER}/bastillion-dev:latest-debian-armv7-${BUILD_NR} ${DOCKER_USER}/bastillion-dev:latest-debian-arm64-${BUILD_NR} ${DOCKER_USER}/bastillion-dev:latest-debian-amd64-${BUILD_NR}
-          docker manifest push ${DOCKER_USER}/bastillion-dev:latest-debian 
-          docker manifest create ${DOCKER_USER}/bastillion-dev:latest ${DOCKER_USER}/bastillion-dev:latest-debian-armv7-${BUILD_NR} ${DOCKER_USER}/bastillion-dev:latest-debian-arm64-${BUILD_NR} ${DOCKER_USER}/bastillion-dev:latest-debian-amd64-${BUILD_NR}
-          docker manifest push ${DOCKER_USER}/bastillion-dev:latest
+          echo "#!/bin/bash" > push-shared-tags.sh
+          for dist in $(cat .github/matrix-parameters.json | jq -c '.distribution[]' -r); do
+            echo -n "docker manifest create ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${dist}" >> push-shared-tags.sh
+            for arch in $(cat .github/matrix-parameters.json | jq -c '.platform[]' -r | awk -F  "/" '{print $2$3}'); do 
+              if ! [ "$dist" = "alpine" -a "$arch" = "armv7" ]; then
+                echo -n " ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${dist}-${arch}-${BUILD_NR}" >> push-shared-tags.sh
+              fi
+            done
+            echo "" >> push-shared-tags.sh
+            echo "docker manifest push ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-${dist}" >> push-shared-tags.sh
+          done
+          echo -n "docker manifest create ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}" >> push-shared-tags.sh
+          for arch in $(cat .github/matrix-parameters.json | jq -c '.platform[]' -r | awk -F  "/" '{print $2$3}'); do 
+            echo -n " ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}-debian-${arch}-${BUILD_NR}" >> push-shared-tags.sh
+          done
+          echo "" >> push-shared-tags.sh
+          echo "docker manifest push ${DOCKER_USER}/${IMAGE_NAME}:${IMAGE_VER}" >> push-shared-tags.sh
+          echo "exit 0" >> push-shared-tags.sh
+          cat push-shared-tags.sh
+          chmod +x ./push-shared-tags.sh
+          ./push-shared-tags.sh 
