--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Trigger:
+  Trigger-Build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
