--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -22,7 +22,7 @@ env:
   GIT_REF: ${{ github.event.inputs.git_ref || github.event.client_payload.git_ref }}
 
 jobs:
-  matrix:
+  Matrix:
     runs-on: ubuntu-latest
     outputs:
       built_matrix: ${{ steps.set-matrix.outputs.matrix }}
@@ -38,13 +38,13 @@ jobs:
         run: |
           output=$(echo $(cat .github/matrix-parameters.json) | sed 's/ //g' )
           echo "::set-output name=matrix::$output"
-  build-and-test:
+  Build-and-Test:
     runs-on: ubuntu-latest
-    needs: matrix
+    needs: Matrix
     strategy:
       fail-fast: false
       matrix:
-        ${{ insert }}: ${{ fromJson(needs.matrix.outputs.built_matrix) }}
+        ${{ insert }}: ${{ fromJson(needs.Matrix.outputs.built_matrix) }}
         exclude:
           - distribution: alpine
             platform: linux/arm/v7
@@ -153,7 +153,7 @@ jobs:
   push-shared-tags:
     runs-on: ubuntu-latest
     needs: 
-      - build-and-test
+      - Build-and-Test
     steps:
       - 
         name: Checkout
