--- a/.github/workflows/refresh-base-images.yml
+++ b/.github/workflows/refresh-base-images.yml
@@ -27,6 +27,7 @@ jobs:
       matrix: ${{fromJson(needs.Setup.outputs.matrix)}}
       max-parallel: 1
     steps:
+      - uses: actions/checkout@v3
       - name: workflow-dispatcher
         uses: ./.github/actions/workflow-dispatcher
         with:
